# crapcasting

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/raycasting/: CacaProjectionRenderer.hpp  CvProjectionRenderer.hpp  ProjectionRenderer.hpp  maprenderer.hpp  player.hpp  point.hpp  projectionrenderer.hpp  types.hpp  wall.hpp
src/: CMakeLists.txt
src/raycasting/: CMakeLists.txt  CacaProjectionRenderer.cpp  CvProjectionRenderer.cpp  ProjectionRenderer.cpp  maprenderer.cpp  projectionrenderer.cpp
src/run/: CMakeLists.txt  main.cpp
